# pycpap

./: IDEAS.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: airmini-ble-protocol.md  airmini-pairing-guide.md  airmini-protocol.md
pycpap/: __init__.py  models.py
pycpap/fetchers/: __init__.py  base.py  http.py  local.py
pycpap/readers/: __init__.py  base.py  resmed.py
tests/: test_resmed.py
tools/: airmini_pair_mac.py
tools/airmini-tools/: bt.entitlements  spp_bridge.swift
