[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycpap"
version = "0.2.0"
description = "Async Python library for fetching and parsing CPAP therapy data"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pyEDFlib>=0.1.22",
    "aiohttp>=3.9",
    "aiofiles>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.urls]
Homepage = "https://github.com/prestomation/pycpap"
Repository = "https://github.com/prestomation/pycpap"

[tool.hatch.build.targets.wheel]
packages = ["pycpap"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
